<resources>
    <string name="app_name">assignment1_alfonso</string>
    <string name="BtnSearchTxt">Search</string>
    <string name="iptSearchHolder">Search a movie</string>
    <string name="lbMovieTitle">Movie Title:</string>
    <string name="tvMovieTitle">Movie</string>
    <string name="lbDirector">Director Name:</string>
    <string name="tvDirector">Director</string>
    <string name="lbRating">Movie Rating:</string>
    <string name="tvRating">Rating</string>
    <string name="lbRelease">Release Year:</string>
    <string name="tvYear">Year</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="txtViewID">Movie id</string>
    <string name="movieID">movie id</string>
    <string name="back">\uf060</string>
    <string name="lbDuration">Runtime: 120 min</string>
    <string name="lbPlot">Movie plot goes here...</string>
</resources>