<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/iptSearchHolder" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnSearchTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/lbMovieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbMovieTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMovieTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMovieTitle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/lbDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbDirector"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDirector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

    <TextView
        android:id="@+id/tvDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDirector"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/lbMovieRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbRating"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDirector" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRating"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDirector"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/lbYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbRelease"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRating" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvYear"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRating"
        app:layout_constraintVertical_bias="0.12" />

</androidx.constraintlayout.widget.ConstraintLayout>