<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/posterLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="@dimen/with_poster"
            android:layout_height="@dimen/height_poster"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/movie_poster"
            app:srcCompat="@drawable/ic_launcher_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/posterLayout"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/movieIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/lbMovieTitle"
            android:src="@drawable/movie_24" />

        <TextView
            android:id="@+id/txtViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:maxLines="1"
            android:text="@string/tvMovieTitle"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/releaseLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayout"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/posterLayout"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/releaseIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/lbRating"
            android:src="@drawable/history_24" />

        <TextView
            android:id="@+id/tvRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/tvYear"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/idLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/releaseLayout"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/posterLayout"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/movieIcon2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/movieID"
            android:src="@drawable/confirmation_number_24" />

        <TextView
            android:id="@+id/tvMovieId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/txtViewID"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="0dp"
        android:background="#808080" />


</RelativeLayout>